--- a/page2.html
+++ b/page2.html
@@ -110,5 +110,6 @@
                 .text(d => d);
         });
     </script>
+    <button class="button" onclick="location.href='page1.html'">Previous</button>
 </body>
 </html>
