--- a/page2.html
+++ b/page2.html
@@ -5,6 +5,10 @@
 </head>
 <body>
     <h1>Income by State - Rural vs Urban</h1>
+    <ul>
+        <li>This scene labels the data points green if it is a rural state or yellow if it is a urban state.</li>
+        <li>As you can see rural states have more income growth.</li>
+    </ul>
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <script>
         // Set dimensions and margins
