--- a/page1.html
+++ b/page1.html
@@ -114,7 +114,7 @@
 
         //plot data
         svg.selectAll("dot")
-  .data(incomeData)
+  .data(filteredData) // Change this line
   .enter().append("circle")
   .attr("cx", function(d) { return x(d['YoY Growth']); })
   .attr("cy", function(d) { return y(d['2021 Median income']); })
@@ -155,4 +155,5 @@
   <button class="button" onclick="location.href='page2.html'">Next</button>
 </body>
 </html>
+
 
